immich/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: immich
spec:
  replicas: 2
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich
    spec:
      containers:
        - name: immich
          volumeMounts:
            - name: immich-data
              mountPath: /data
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 4096Mi
          image: ghcr.io/immich-app/immich-server:v1.143.1
          ports:
            - containerPort: 2283
              protocol: TCP
          imagePullPolicy: Always
      volumes:
        - name: immich-data
          persistentVolumeClaim:
            claimName: immich-cifs-pvc
