immich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-ingress
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`foto.cngei.it`)
      services:
        - kind: Service
          name: immich
          port: 2283
  tls:
    secretName: immich-tls
